@@ -98,6 +98,7 @@
 <<g_rc.c : g_rc_sort_component_library()>>
 <<g_rc.c : g_rc_add_menu()>>
 <<g_rc.c : g_rc_window_size()>>
+<<g_rc.c : g_rc_warp_cursor()>>
 
 @
 
@@ -2530,6 +2531,24 @@ g_rc_window_size(SCM width, SCM height)
 
   return SCM_BOOL_T;
 }
-
-
 @ %def g_rc_window_size
+
+
+@section Function @code{g_rc_warp_cursor()}
+
+@defun g_rc_warp_cursor mode
+@end defun
+
+<<g_rc.c : g_rc_warp_cursor()>>=
+SCM
+g_rc_warp_cursor(SCM mode)
+{
+  static const vstbl_entry mode_table[] = {
+    {TRUE , "enabled" },
+    {FALSE, "disabled"},
+  };
+
+  RETURN_G_RC_MODE("warp-cursor", default_warp_cursor, 2);
+}
+
+@ %def g_rc_warp_cursor
